# dusk-example-contract

./: .gitignore  Cargo.toml  Makefile  README.md
hasher/: Cargo.toml
hasher/src/: lib.rs
src/: leaf.rs  lib.rs
src/host/: mod.rs  query.rs  tests.rs  transaction.rs
src/hosted/: bridge.rs  mod.rs  query.rs  transaction.rs
