[package]
name = "hasher"
version = "0.1.0"
authors = ["CPerezz <c.perezbaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-bls12_381 = { version = "0.3", features = ["canon"] }
poseidon252 = { git = "https://github.com/dusk-network/poseidon252", branch = "min_nost", features = ["canon"]}